# dance-club-app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini  config.py  docker-compose.yml  dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6fcb5bee1878_added_sessions_to_client.py  8dca07b860ae_init.py  a595dd5cd54c_added_subscriptions.py  bc8a5449aaf1_init.py
backend/src/: app.py  main.py  settings.py
backend/src/api/: dependencies.py
backend/src/api/routers/: clients_router.py
backend/src/api/schemas/: client.py
backend/src/core/: __init__.py  clients_service.py
backend/src/database/: db.py  session.py
backend/src/database/models/: __init__.py  client.py  subscription.py  teacher.py
backend/src/db/: db.py  models.py
backend/src/db/alembic/: env.py
backend/src/db/alembic/versions/: 16a5d9fa1d32_added_is_admin_to_user.py  7a9652c7816b_init_migration.py  a7e12258543f_removed_redundant_nullable_fields.py  a9b30103fad9_init.py  f130f6775535_addedmodelsasclasses.py
backend/src/db/models/: subscription.py  user.py
backend/src/routers/: clients_router.py  dependecies.py  user_router.py
backend/src/schemas/: subscription_response.py  user.py  user_request.py  user_response.py
backend/src/services/: user_service.py
bot/: dockerfile  pyproject.toml
bot/src/: bot.py  config.py
bot/src/handlers/: admins_handlers.py
frontend/: dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  package-lock.json  package.json
frontend/src/src/: App.css  App.tsx
frontend/src/src/components/: Modal.tsx
frontend/src/src/components/Button/: Button.tsx  style.css
frontend/src/src/components/Clients/: Client.tsx  ClientsList.tsx  EditClient.tsx  style.css
frontend/src/src/components/Header/: Header.tsx  style.css
frontend/src/src/components/MainMenu/: ClientHeader.tsx  MainMenu.tsx  MenuButton.tsx  style.css
frontend/src/src/components/MainMenu/EntitiesMenu/: EntitiesMenu.tsx  MenuButton.tsx  style.css
frontend/src/src/components/MainMenu/Header/: FullNameHeader.tsx  Header.tsx  WidgetHeader.tsx  style.css
nginx/: localhost.crt  localhost.key  nginx.conf
src/: bot.py  config.py
src/handlers/: admins_handlers.py
