[tool.poetry]
name = "dance-club-attendance-check-in"
version = "0.1.0"
description = ""
authors = ["egor-vlasov <vlasov-egorl@ya.ru>"]
readme = "README.md"
packages = [{include = "dance_club_attendance_check_in"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = "^1.10.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
