[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vlasov-egor <vlasov-egorl@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.0"
alembic = "^1.9.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
uvicorn = "0.21.1"
python-jose = "^3.3.0"
cryptography = "^39.0.2"
passlib = "^1.7.4"
pcrypt = "^1.0.5"
sqlalchemy = "2.0.7"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
