[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vlasov-egor <vlasov-egorl@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
databases = "^0.7.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
